--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -84,7 +84,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_DcpOutput>C:\DEV\Delphi_Workspace\Mandel3D\</DCC_DcpOutput>
-        <DCC_Define>ENABLE_EXTENSIONS;ONLY_ONE_THREAD;$(DCC_Define)</DCC_Define>
+        <DCC_Define>ENABLE_EXTENSIONS;ONLY_ONE_THREAD2;$(DCC_Define)</DCC_Define>
         <VerInfo_MinorVer>8</VerInfo_MinorVer>
         <DCC_Inlining>off</DCC_Inlining>
         <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
