--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -83,8 +83,9 @@
         <DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <DCC_UnitSearchPath>C:\DEV\PaxCompiler\mb3d\Sources;C:\DEV\PaxCompiler\mb3d\;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_DcpOutput>C:\DEV\Delphi_Workspace\Mandel3D\</DCC_DcpOutput>
-        <DCC_Define>ENABLE_EXTENSIONS;ONLY_ONE_THREAD2;$(DCC_Define)</DCC_Define>
+        <DCC_Define>ENABLE_EXTENSIONS2;USE_PAX_COMPILER;$(DCC_Define)</DCC_Define>
         <VerInfo_MinorVer>8</VerInfo_MinorVer>
         <DCC_Inlining>off</DCC_Inlining>
         <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
@@ -208,6 +209,7 @@
         <DCCReference Include="uMapCalcWindow.pas">
             <Form>MapCalcWindow</Form>
         </DCCReference>
+        <DCCReference Include="FormulaCompiler.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
