--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -217,6 +217,7 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="mutagen\MutaGen.pas"/>
+        <DCCReference Include="formula\FormulaNames.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
