Added support for Visual Themes

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ mutagen/__history/*
 render/__history/*
 facade/__history/*
 formula/__history/*
+prefs/__history/*
+maps/__history/*
 *.exe
 *.zip
 Mandelbulb3D.ini
