--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -41,6 +41,7 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <VCL_Custom_Styles>Amakrits|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Amakrits.vsf;&quot;Amethyst Kamri|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\AmethystKamri.vsf&quot;;&quot;Aqua Graphite|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\AquaGraphite.vsf&quot;;&quot;Aqua Light Slate|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\AquaLightSlate.vsf&quot;;Auric|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Auric.vsf;Carbon|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Carbon.vsf;&quot;Charcoal Dark Slate|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\CharcoalDarkSlate.vsf&quot;;&quot;Cobalt XEMedia|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\CobaltXEMedia.vsf&quot;;&quot;Cyan Dusk|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\CyanDusk.vsf&quot;;&quot;Cyan Night|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\CyanNight.vsf&quot;;&quot;Emerald Light Slate|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\EmeraldLightSlate.vsf&quot;;Glossy|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Glossy.vsf;&quot;Golden Graphite|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\GoldenGraphite.vsf&quot;;&quot;Iceberg Classico|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\IcebergClassico.vsf&quot;;&quot;Lavender Classico|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\LavenderClassico.vsf&quot;;Light|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Light.vsf;Luna|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Luna.vsf;&quot;Metropolis UI Black|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\MetropolisUIBlack.vsf&quot;;&quot;Metropolis UI Blue|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\MetropolisUIBlue.vsf&quot;;&quot;Metropolis UI Dark|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\MetropolisUIDark.vsf&quot;;&quot;Metropolis UI Green|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\MetropolisUIGreen.vsf&quot;;Obsidian|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Obsidian.vsf;&quot;Ruby Graphite|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\RubyGraphite.vsf&quot;;&quot;Sapphire Kamri|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\SapphireKamri.vsf&quot;;Silver|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\Silver.vsf;&quot;Slate Classico|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\SlateClassico.vsf&quot;;&quot;Smokey Quartz Kamri|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\SmokeyQuartzKamri.vsf&quot;;TabletDark|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\TabletDark.vsf;&quot;Turquoise Gray|VCLSTYLE|$(PUBLIC)\Documents\Embarcadero\Studio\14.0\Styles\TurquoiseGray.vsf&quot;</VCL_Custom_Styles>
         <SanitizedProjectName>Mandelbulb3D</SanitizedProjectName>
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <Icon_MainIcon>Mandelbulb3D_Icon4.ico</Icon_MainIcon>
@@ -152,8 +153,8 @@
         <DCCReference Include="AniProcess.pas">
             <Form>AniProcessForm</Form>
         </DCCReference>
-        <DCCReference Include="IniDirsForm.pas">
-            <Form>IniDirForm</Form>
+        <DCCReference Include="maps\MapSequencesGUI.pas">
+            <Form>MapSequencesFrm</Form>
         </DCCReference>
         <DCCReference Include="FormulaGUI.pas">
             <Form>FormulaGUIForm</Form>
@@ -198,7 +199,7 @@
         <DCCReference Include="RegisterM3Pgraphic.pas"/>
         <DCCReference Include="ColorSSAO.pas"/>
         <DCCReference Include="ThreadUtils.pas"/>
-        <DCCReference Include="Maps.pas"/>
+        <DCCReference Include="maps\Maps.pas"/>
         <DCCReference Include="PostProcessForm.pas">
             <Form>PostProForm</Form>
         </DCCReference>
@@ -212,12 +213,21 @@
         <DCCReference Include="FormulaCompiler.pas"/>
         <DCCReference Include="render\PreviewRenderer.pas"/>
         <DCCReference Include="facade\MB3DFacade.pas"/>
-        <DCCReference Include="mutagen\MutaGenUI.pas">
+        <DCCReference Include="mutagen\MutaGenGUI.pas">
             <Form>MutaGenFrm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="mutagen\MutaGen.pas"/>
         <DCCReference Include="formula\FormulaNames.pas"/>
+        <DCCReference Include="maps\MapSequences.pas"/>
+        <DCCReference Include="prefs\IniDirsForm.pas">
+            <Form>IniDirForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="prefs\VisualThemesGUI.pas">
+            <Form>VisualThemesFrm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
