--- a/Mandelbulb3DMSeq.ini
+++ b/Mandelbulb3DMSeq.ini
@@ -1,16 +1,16 @@
 Count=3
-DestChannel#0=9002
+DestChannel#0=9000
 ImageFilename#0=C:\GFX\Mandelbulb3D\M3Sequences\shark\s0001.png
 FirstImage#0=1
 LastImage#0=120
 Loop#0=1
-DestChannel#1=9003
-ImageFilename#1=C:\GFX\Mandelbulb3D\M3Sequences\torus\t0005.png
+DestChannel#1=9002
+ImageFilename#1=C:\GFX\Mandelbulb3D\M3Sequences\boobs\b0001.png
 FirstImage#1=1
-LastImage#1=60
+LastImage#1=120
 Loop#1=1
-DestChannel#2=9004
-ImageFilename#2=C:\GFX\Mandelbulb3D\M3Sequences\cube\c0005.png
+DestChannel#2=9003
+ImageFilename#2=C:\GFX\Mandelbulb3D\M3Sequences\shark\s0001.png
 FirstImage#2=1
-LastImage#2=60
+LastImage#2=120
 Loop#2=1
