new increment-option when defining animated maps (higher values than 1 will skip frames)

--- a/Mandelbulb3DMSeq.ini
+++ b/Mandelbulb3DMSeq.ini
@@ -4,13 +4,16 @@ ImageFilename#0=C:\GFX\Mandelbulb3D\M3Sequences\shark\s0001.png
 FirstImage#0=1
 LastImage#0=120
 Loop#0=1
+Increment#0=1
 DestChannel#1=9002
 ImageFilename#1=C:\GFX\Mandelbulb3D\M3Sequences\boobs\b0001.png
 FirstImage#1=1
 LastImage#1=120
 Loop#1=1
+Increment#1=3
 DestChannel#2=9003
 ImageFilename#2=C:\GFX\Mandelbulb3D\M3Sequences\shark\s0001.png
 FirstImage#2=1
 LastImage#2=120
 Loop#2=1
+Increment#2=1
