--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -228,6 +228,7 @@
             <Form>VisualThemesFrm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <None Include="CHANGES.txt"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
