Reverted some of the old changes regarding the increase of the formula-number-limitation, in order to increase stability

--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -86,7 +86,7 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_UnitSearchPath>C:\DEV\PaxCompiler\mb3d\Sources;C:\DEV\PaxCompiler\mb3d\;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_DcpOutput>C:\DEV\Delphi_Workspace\Mandel3D\</DCC_DcpOutput>
-        <DCC_Define>ENABLE_EXTENSIONS2;USE_PAX_COMPILER;PARAMS_PER_THREAD;JIT_FORMULA_PREPROCESSING;$(DCC_Define)</DCC_Define>
+        <DCC_Define>USE_PAX_COMPILER;PARAMS_PER_THREAD;JIT_FORMULA_PREPROCESSING;$(DCC_Define)</DCC_Define>
         <VerInfo_MinorVer>8</VerInfo_MinorVer>
         <DCC_Inlining>off</DCC_Inlining>
         <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
@@ -174,8 +174,8 @@
         <DCCReference Include="Undo.pas"/>
         <DCCReference Include="CalcSR.pas"/>
         <DCCReference Include="CalcPart.pas"/>
-        <DCCReference Include="VoxelExport.pas">
-            <Form>FVoxelExport</Form>
+        <DCCReference Include="export\MeshExportUI.pas">
+            <Form>MeshExportFrm</Form>
         </DCCReference>
         <DCCReference Include="CalcVoxelSliceThread.pas"/>
         <DCCReference Include="calcBlocky.pas"/>
@@ -237,7 +237,13 @@
             <Form>ParamValueEditFrm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="export\PointCloudExport.pas"/>
+        <DCCReference Include="VoxelExport.pas">
+            <Form>FVoxelExport</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <None Include="CHANGES.txt"/>
+        <None Include=".gitignore"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
