--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
 *.dcu
 History/*
-__history/*
-mutagen/__history/*
-render/__history/*
-facade/__history/*
-formula/__history/*
-prefs/__history/*
-maps/__history/*
-export/__history/*
-bulbtracer/__history/*
-bulbtracer/meshmerge/__history/*
-opengl/__history/*
+**/__history/*
 *.exe
 *.zip
 Mandelbulb3D.ini
