Many additions to the heightmap generator

--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -271,6 +271,7 @@
             <Form>PostProForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="heightmapgen\PNMReader.pas"/>
         <None Include="CHANGES.txt"/>
         <None Include=".gitignore"/>
         <BuildConfiguration Include="Debug">
