--- a/Mandelbulb3D.dproj
+++ b/Mandelbulb3D.dproj
@@ -234,16 +234,16 @@
         <DCCReference Include="VoxelExport.pas">
             <Form>FVoxelExport</Form>
         </DCCReference>
-        <DCCReference Include="bulbtracer\VectorMath.pas"/>
+        <DCCReference Include="bulbtracer2\VectorMath.pas"/>
         <DCCReference Include="bulbtracer2\BulbTracer2.pas"/>
         <DCCReference Include="bulbtracer2\ObjectScanner2.pas"/>
         <DCCReference Include="bulbtracer2\BulbTracer2Config.pas"/>
         <DCCReference Include="opengl\opengl12.pas"/>
         <DCCReference Include="opengl\MeshPreview.pas"/>
-        <DCCReference Include="bulbtracer\BulbTracerUITools.pas"/>
-        <DCCReference Include="bulbtracer\MeshReader.pas"/>
-        <DCCReference Include="bulbtracer\MeshIOUtil.pas"/>
-        <DCCReference Include="bulbtracer\MeshSimplifier.pas"/>
+        <DCCReference Include="bulbtracer2\BulbTracerUITools.pas"/>
+        <DCCReference Include="bulbtracer2\MeshReader.pas"/>
+        <DCCReference Include="bulbtracer2\MeshIOUtil.pas"/>
+        <DCCReference Include="bulbtracer2\MeshSimplifier.pas"/>
         <DCCReference Include="opengl\ShaderUtil.pas"/>
         <DCCReference Include="opengl\dglOpenGL.pas"/>
         <DCCReference Include="opengl\MeshPreviewUI.pas">
@@ -261,15 +261,8 @@
         <DCCReference Include="heightmapgen\PNMReader.pas"/>
         <DCCReference Include="script\CompilerUtil.pas"/>
         <DCCReference Include="formula\FormulaCompiler.pas"/>
-        <DCCReference Include="bulbtracer\BulbTracer.pas"/>
-        <DCCReference Include="bulbtracer\ObjectScanner.pas"/>
-        <DCCReference Include="bulbtracer\BulbTracerConfig.pas"/>
-        <DCCReference Include="bulbtracer\BulbTracerUI.pas">
-            <Form>BulbTracerFrm</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="bulbtracer\VertexList.pas"/>
-        <DCCReference Include="bulbtracer\MeshWriter.pas"/>
+        <DCCReference Include="bulbtracer2\VertexList.pas"/>
+        <DCCReference Include="bulbtracer2\MeshWriter.pas"/>
         <None Include="CHANGES.txt"/>
         <None Include=".gitignore"/>
         <BuildConfiguration Include="Debug">
